[package]
name = "turret_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
bevy_ecs_tilemap = "0.10.0"
ldtk_rust = "0.6.0"
log = "0.4.17"
serde_json = "1.0.95"
tiled = "0.11.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[toolchain]
channel = "nightly"
